--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,24 @@
 * {
   font-family: 'Roboto', sans-serif;
+  box-sizing:: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #f6f8fc;
+}
+
+.content {
+  padding: 1rem;
+  background-color: #fff;
+  height: calc(100vh - 32px);
+  width: 100vw;
+}
+
+@media screen and (min-width: 992px) {
+  .content {
+    max-width: 992px;
+    margin: 0 auto;
+  }
 }
