--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -3,7 +3,7 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
 }
 
 .pokemon {
