--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,12 +6,83 @@
   grid-template-columns: 1fr;
 }
 
+.normal {
+  background-color: #a6a877;
+}
+
+.grass {
+  background-color: #77c850;
+}
+
+.fire {
+  background-color: #ee7f30;
+}
+
+.water {
+  background-color: #678fee;
+}
+
+.electric {
+  background-color: #f7cf2e;
+}
+
+.ice {
+  background-color: #98d5d7;
+}
+
+.ground {
+  background-color: #dfbf69;
+}
+
+.flying {
+  background-color: #a98ff0;
+}
+
+.poison {
+  background-color: #a040a0;
+}
+
+.fighting {
+  background-color: #bf3029;
+}
+
+.psychic {
+  background-color: #f65687;
+}
+
+.dark {
+  background-color: #725847;
+}
+
+.rock {
+  background-color: #b8a137;
+}
+
+.bug {
+  background-color: #a8b720;
+}
+
+.ghost {
+  background-color: #6e5896;
+}
+
+.steel {
+  background-color: #b9b7cf;
+}
+
+.dragon {
+  background-color: #6f38f6;
+}
+
+.fairy {
+  background-color: #f9aec7;
+}
+
 .pokemon {
   display: flex;
   flex-direction: column;
   margin: 0.5rem;
   padding: 1.5rem 1rem;
-  background-color: #49D0B0;
   color: #ffffff;
   border-radius: 1rem;
 }
@@ -19,9 +90,10 @@
 .pokemon .name {
   color: #fff;
   margin-bottom: 0.25rem;
+  text-transform: capitalize;
 }
 
-.pokemon .number{
+.pokemon .number {
   color: #000;
   opacity: .4;
   text-align: right;
@@ -42,12 +114,13 @@
 }
 
 .pokemon .detail .types .type {
-  background-color: #61e1ca;
   color: #fff;
   padding: .25rem .5rem;
   margin: .25rem 0;
   font-size: .625rem;
   border-radius: .725rem;
+  filter: brightness(1.1);
+  text-align: center;
 }
 
 .pokemon .detail img {
@@ -72,4 +145,3 @@
     grid-template-columns: 1fr 1fr;
   }
 }
-
