--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -128,6 +128,23 @@
   height: 70px;
 }
 
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100% - 16px;
+  padding: 1rem;
+}
+
+.pagination button {
+  padding: 0.5rem;
+  color: #fff;
+  background-color: #6c79db;
+  border: none;
+  border-radius: 1rem;
+}
+
 @media screen and (min-width: 992px) {
   .pokemons {
     grid-template-columns: 1fr 1fr 1fr 1fr;
